--- a/DFC.App.MatchSkills/ViewComponents/SkillsList/Default.cshtml
+++ b/DFC.App.MatchSkills/ViewComponents/SkillsList/Default.cshtml
@@ -3,6 +3,22 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, DFC.Personalisation.CommonUI
 
+<style>
+    .checkbox-container {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .govuk-checkboxes__item {
+        flex-basis: 48%;
+        flex-grow: 0;
+        box-sizing: border-box;
+        flex-direction: row;
+        margin: 5px;
+        
+    }
+</style>
+
 @if (null == Model)
 {
     // @ToDo: Log this as an error?
