--- a/DFC.App.MatchSkills/Views/Basket/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/Basket/Body.cshtml
@@ -4,24 +4,26 @@
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <govukHeadingH1 text="@Model.PageHeading"></govukHeadingH1>
-        <p>
-            These are the skills that you’ve developed so far.
-        </p>
-        <p>Skills you have added:</p>
-        @{
-            var slm = new SkillsListViewModel(Model.Id.Value, SkillsListViewModel.ListItemType.Bullet);
-            slm.Skills.LoadFrom(Model.Skills);
-            slm.BeginSkillsListHTML = "<ul class='govuk-list govuk-list--bullet'>";
-            slm.EndSkillsListHTML = "</ul>";
-        }
-        @await Component.InvokeAsync("SkillsList", slm)
-        <p><a class="govuk-link" href="@Model.CompositeSettings.Path/@CompositeViewModel.PageId.MoreSkills">Add more skills to this list</a></p>
+        <form id="@Model.GetElementId("Form", "Continue")" action="@Model.Id" method="post">
 
-        <br>
-        <p>
-            <govukButtonLink id="@Model.GetElementId("govukButtonLink","Continue")" LinkText="Continue to your career matches" LinkHref="@Model.CompositeSettings.Path/matches"></govukButtonLink>
-        </p>
+            <govukHeadingH1 text="@Model.PageHeading"></govukHeadingH1>
+            <p>
+                These are the skills that you’ve developed so far.
+            </p>
+            <p>Skills you have added:</p>
+            @{
+                var slm = new SkillsListViewModel(Model.Id.Value, SkillsListViewModel.ListItemType.Bullet);
+                slm.Skills.LoadFrom(Model.Skills);
+                slm.BeginSkillsListHTML = "<ul class='govuk-list govuk-list--bullet'>";
+                slm.EndSkillsListHTML = "</ul>";
+            }
+            @await Component.InvokeAsync("SkillsList", slm)
+            <p><a class="govuk-link" href="@Model.CompositeSettings.Path/@CompositeViewModel.PageId.MoreSkills">Add more skills to this list</a></p>
+            <br>
+            <p>
+                <govukButton id="@Model.GetElementId("govukButtonLink", "Continue")" text="Continue to your career matches"></govukButton>
+            </p>
+        </form>
     </div>
     <div class="govuk-grid-column-one-third">
         <div role="note" aria-label="Information" class="govuk-inset-text">
