"Worked" value now retained on page load

--- a/DFC.App.MatchSkills/Views/Worked/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/Worked/Body.cshtml
@@ -14,8 +14,21 @@
         ErrorSummaryMessage = "Choose whether you have worked before",
         RadioButtons = new List<RadioButtonModel>
 {
-            {new RadioButtonModel {Text = "Yes", Order = 1, Name = "Choice", Value = "Yes"}},
-            {new RadioButtonModel {Text = "No", Order = 2, Name = "Choice", Value = "No"}}
+            {new RadioButtonModel
+            {
+                Text = "Yes", Order = 1, 
+                Name = "Choice", 
+                Value = "Yes",
+                Checked = Model.HasWorkedBefore.HasValue && Model.HasWorkedBefore.Value
+            }},
+            {new RadioButtonModel
+            {
+                Text = "No", 
+                Order = 2, 
+                Name = "Choice", 
+                Value = "No",
+                Checked = Model.HasWorkedBefore.HasValue && !Model.HasWorkedBefore.Value
+            }}
 
         }
     };
