--- a/DFC.App.MatchSkills/Views/Matches/_MatchResult.cshtml
+++ b/DFC.App.MatchSkills/Views/Matches/_MatchResult.cshtml
@@ -1,12 +1,13 @@
 ﻿@model DFC.App.MatchSkills.Models.CareerMatch
 
-<div class="app-long-results__item">
-    <div class="result-description">
-        <h3 class="govuk-heading-m"><a href="@Model.JobProfile.Url">@Model.JobProfile.Title</a></h3>
-        <p>@Model.JobProfile.Description</p>
-    </div>
-    <div class="ncs-progress govuk-clearfix">
-        <span class="ncs-progress__count "><strong class="govuk-!-font-size-28">@Model.MatchStrengthPercentage%</strong> <span class-="govuk-!-font-size-18"><strong class="visually-hidden govuk-!-font-size-18 small">Skills match</strong></span></span>
-        <div class="ncs-progress__bar"><span style="width: 85%"></span></div>
-    </div>
+<div class="result-description">
+    <h3 class="govuk-heading-m"><a href="@Model.JobProfile.Url">@Model.JobProfile.Title</a></h3>
+    <p>@Model.JobProfile.Description</p>
+</div>
+<div class="ncs-progress govuk-clearfix">
+    <span class="ncs-progress__count ">
+        <strong class="govuk-!-font-size-28">@Model.MatchStrengthPercentage%</strong> 
+        <strong class="small">Skills match</strong>
+    </span>
+    <div class="ncs-progress__bar"><span style="width: @Model.MatchStrengthPercentage%"></span></div>
 </div>
