--- a/DFC.App.MatchSkills/Views/Basket/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/Basket/Body.cshtml
@@ -29,7 +29,7 @@
         <div role="note" aria-label="Information" class="govuk-inset-text">
             <p>
                 If there are any of your skills that you do not want to match to careers, you can
-                <a href="@Model.CompositeSettings.Path/#TBC">remove</a> them from this list
+                <a href="@Model.CompositeSettings.Path/@CompositeViewModel.PageId.RemoveSkills.Value">remove</a> them from this list
             </p>
         </div>
     </div>
