--- a/DFC.App.MatchSkills/Views/Matches/_MatchResult.cshtml
+++ b/DFC.App.MatchSkills/Views/Matches/_MatchResult.cshtml
@@ -6,8 +6,8 @@
 </div>
 <div class="ncs-progress govuk-clearfix">
     <span class="ncs-progress__count ">
-        <strong class="govuk-!-font-size-28">@Model.MatchStrengthPercentage%</strong> 
-        <strong class="small">Skills match</strong>
+        <strong class="govuk-!-font-size-28">@Model.MatchStrengthPercentage%</strong><br/>
+        <strong class="small">Skills&nbsp;match</strong>
     </span>
     <div class="ncs-progress__bar"><span style="width: @Model.MatchStrengthPercentage%"></span></div>
 </div>
