--- a/DFC.App.MatchSkills/Views/Worked/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/Worked/Body.cshtml
@@ -6,7 +6,7 @@
     {
         ButtonText = "Continue",
         LinkText = "TestLink",
-        Text = "Choose one of the options below",
+        Text = "Choose one of the options below.",
         FormAction = $"{Model.Id}",
         ParentModel = Model,
         HasError = Model.HasError,
