Dual col added to other screen

--- a/DFC.App.MatchSkills/Views/RelatedSkills/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/RelatedSkills/Body.cshtml
@@ -4,6 +4,12 @@
 @{
     var checkboxError = Model.GetElementId("govukCheckBox", "Error");
     var form = Model.GetElementId("form", "Form");
+    var slm = new SkillsListViewModel(Model.Id.Value, SkillsListViewModel.ListItemType.Checkbox)
+    {
+        BeginSkillsListHTML = "<div class=\"govuk-checkboxes skill-list-container govuk-checkboxes--small dual-checkbox-container\">",
+        EndSkillsListHTML = "</div>"
+    };
+    slm.Skills.LoadFrom(Model.RelatedSkills);
 }
 <govukErrorSummary hidden="@(!Model.HasError)">
     <govukErrorSummaryItem href="#" text="You have not selected any skills"></govukErrorSummaryItem>
@@ -12,39 +18,37 @@
 <div class="govuk-main-wrapper govuk-main-wrapper--auto-spacing">
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            <form id="@form" action="/matchskills/relatedskills/addskills" method="post">
-                @Html.HiddenFor(x => x.SearchTerm)
-                <div class="govuk-form-group">
-                    <fieldset class="govuk-fieldset">
-                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-                            <govukHeadingH1 Text="@Model.PageHeading" />
-                        </legend>
-                        <div class="govuk-form-group @(Model.HasError ? "govuk-form-group--error" : "")">
-                            <govukHeadingH3 text="@Model.RelatedSkills.Count Result@(Model.RelatedSkills.Count > 1 || Model.RelatedSkills.Count == 0 ? "s" : "") for @Model.SearchTerm"></govukHeadingH3>
-                            <govukError id="@checkboxError" hidden="@(!Model.HasError)" text="Choose skills to add to your skills list"></govukError>
-                            <div class="govuk-checkboxes govuk-checkboxes--small skill-list-container checkbox-container ">
+
+                <form id="@form" action="/matchskills/relatedskills/addskills" method="post">
+                    @Html.HiddenFor(x => x.SearchTerm)
+                    <div class="govuk-form-group">
+                        <fieldset class="govuk-fieldset">
+                            <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+                                <govukHeadingH1 Text="@Model.PageHeading" />
+                            </legend>
+                            <div class="govuk-form-group @(Model.HasError ? "govuk-form-group--error" : "")">
+                                <govukHeadingH3 text="@Model.RelatedSkills.Count Result@(Model.RelatedSkills.Count > 1 || Model.RelatedSkills.Count == 0 ? "s" : "") for @Model.SearchTerm"></govukHeadingH3>
+                                <govukError id="@checkboxError" hidden="@(!Model.HasError)" text="Choose skills to add to your skills list"></govukError>
+
                                 @if (Model.RelatedSkills.Count == 0)
                                 {
                                     <govukLabel id="@Model.GetElementId("govukCheckbox", "NoRelatedSkillsFound")" Text="No related skills found"></govukLabel>
                                 }
                                 else
                                 {
-                                    var slm = new SkillsListViewModel(Model.Id.Value, SkillsListViewModel.ListItemType.Checkbox);
-                                    slm.Skills.LoadFrom(Model.RelatedSkills);
                                     @await Component.InvokeAsync("SkillsList", slm)
-                                    ;
                                 }
-                            </div>
-                        </div>
 
-                    </fieldset>
-                </div>
-                @if (Model.RelatedSkills.Count >= 1)
-                {
-                    <govukButton id="@Model.GetElementId("govukButton", "Add")" text="Add to skills list" />
-                }
-                <govukButtonLink id="@Model.GetElementId("govukButtonLink", "Cancel")" LinkText="Cancel" AdditionalClass="govuk-button--secondary" LinkHref="/Matchskills/Basket/" />
-            </form>
+                            </div>
+
+                        </fieldset>
+                    </div>
+                    @if (Model.RelatedSkills.Count >= 1)
+                    {
+                        <govukButton id="@Model.GetElementId("govukButton", "Add")" text="Add to skills list" />
+                    }
+                    <govukButtonLink id="@Model.GetElementId("govukButtonLink", "Cancel")" LinkText="Cancel" AdditionalClass="govuk-button--secondary" LinkHref="/Matchskills/Basket/" />
+                </form>
         </div>
         <div class="govuk-grid-column-one-third">
             <govukHeadingH3 text="Skills you've recently added"></govukHeadingH3>
