--- a/DFC.App.MatchSkills/Views/MoreJobs/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/MoreJobs/Body.cshtml
@@ -9,6 +9,7 @@
     var formElementName = Model.GetElementId("form", Model.FormElementName);
     var autoCompleteError = Model.GetElementId("govukAutoCompleteError", "SearchError");
     var searchButton = Model.GetElementId("govukSecondaryButton", "Search");
+    var formGroup = Model.GetElementId("formGroup", "AutoComplete");
 
 }
 
@@ -20,23 +21,25 @@
 <div class="govuk-main-wrapper govuk-main-wrapper--auto-spacing">
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            <form id="@formElementName" action="@CompositeViewModel.PageId.OccupationSearch/GetSkillsForOccupation" method="post" class="@(Model.HasError ? "govuk-form-group--error": "")">
-                <govukHeadingH1 Text="Enter your job title" />
+            <form id="@formElementName" action="@CompositeViewModel.PageId.OccupationSearch/GetSkillsForOccupation" method="post">
+                <div id="@formGroup" class="govuk-form-group   @(Model.HasError ? "govuk-form-group--error" : "")">
+                    <govukHeadingH1 Text="Enter your job title" />
 
-                <p>This can be your current job or one that you’ve done before. You can match the skills you used in this job to other careers.</p>
+                    <p>This can be your current job or one that you’ve done before. You can match the skills you used in this job to other careers.</p>
 
-                <p>You can add skills from more than one job to your skills list.</p>
-
-
-                <govukAutoComplete Id="@autoCompleteElementName"
-                                   Element="occupations-autocomplete-container" Source="Suggest" FunctionName="AutoComplete"
-                                   autoselect="false" confirmOnBlur="true" cssNameSpace="autocomplete"
-                                   minLength="2" name="EnterJobInputAutocomplete">
-                    <govukAutoCompleteError id="@autoCompleteError" text="Enter a job title" hidden="@(!Model.HasError)"></govukAutoCompleteError>
-                    <govukAutocompleteLabel Text="Enter your current or previous job title" additional-class="govuk-!-font-size-19 govuk-!-font-weight-bold" For="@autoCompleteElementName"></govukAutocompleteLabel>
+                    <p>You can add skills from more than one job to your skills list.</p>
 
 
-                </govukAutoComplete>
+                    <govukAutoComplete Id="@autoCompleteElementName"
+                                       Element="occupations-autocomplete-container" Source="Suggest" FunctionName="AutoComplete"
+                                       autoselect="false" confirmOnBlur="true" cssNameSpace="autocomplete"
+                                       minLength="2" name="EnterJobInputAutocomplete">
+                        <govukAutoCompleteError id="@autoCompleteError" text="Enter a job title" hidden="@(!Model.HasError)"></govukAutoCompleteError>
+                        <govukAutocompleteLabel Text="Enter your current or previous job title" additional-class="govuk-!-font-size-19 govuk-!-font-weight-bold" For="@autoCompleteElementName"></govukAutocompleteLabel>
+
+
+                    </govukAutoComplete>
+                </div>
                 <br />
                 <br />
                 <govukSecondaryButton id="@searchButton" text="Search"></govukSecondaryButton>
@@ -58,7 +61,7 @@
     {
         SearchService = Model.SearchService,
         AutoCompleteElementName = autoCompleteElementName,
-        FormElementName = formElementName,
+        FormElementName = formGroup,
         AutoCompleteError = autoCompleteError,
         SearchButton = searchButton
     };
