--- a/DFC.App.MatchSkills/Views/RemoveSkills/body.cshtml
+++ b/DFC.App.MatchSkills/Views/RemoveSkills/body.cshtml
@@ -32,6 +32,6 @@
             </fieldset>
         </div>
         <govukButton id="@Model.GetElementId("govukButton","RemoveSelectSkills")" text="Remove selected skills" />
-        <govukButtonLink id="@Model.GetElementId("govukButtonLink", "Cancel")" LinkTitle="Cancel Remove Skills" LinkText="Cancel" LinkHref="@CompositeViewModel.PageId.SkillsBasket"></govukButtonLink>
+        <govukButtonLink additional-class="govuk-button--secondary" id="@Model.GetElementId("govukButtonLink", "Cancel")" LinkTitle="Cancel Remove Skills" LinkText="Cancel" LinkHref="@CompositeViewModel.PageId.SkillsBasket"></govukButtonLink>
     </form>
 </div>
