--- a/DFC.App.MatchSkills/Views/MatchDetails/body.cshtml
+++ b/DFC.App.MatchSkills/Views/MatchDetails/body.cshtml
@@ -11,7 +11,7 @@
                 <govukBulletedList text="Skills for you to develop: ">
                     @foreach (var skill in Model.MatchingSkills)
                     {
-                        <govukListItem text="@skill.Name"></govukListItem>
+                        <govukListItem text="@skill"></govukListItem>
                     }
                 </govukBulletedList>
             </div>
@@ -25,7 +25,7 @@
                 <govukBulletedList>
                     @foreach (var skill in Model.MissingSkills)
                     {
-                        <govukListItem text="@skill.Name"></govukListItem>
+                        <govukListItem text="@skill"></govukListItem>
                     }
                 </govukBulletedList>
             </div>
