--- a/DFC.App.MatchSkills/Views/Matches/_MatchResult.cshtml
+++ b/DFC.App.MatchSkills/Views/Matches/_MatchResult.cshtml
@@ -3,8 +3,7 @@
 
 <div class="app-long-results__item">
     <div class="result-description">
-        <h3 class="govuk-heading-m"><a href="@CompositeViewModel.PageId.MatchDetails">@Model.JobProfile.Title</a></h3>
-        <h3 class="govuk-heading-m"><a href="@CompositeViewModel.PageId.MatchDetails?id=@Model.JobProfile.ProfileGuid">@Model.JobProfile.Title</a></h3>
+        <h3 class="govuk-heading-m"><a href="@CompositeViewModel.PageId.MatchDetails?id=@Model.EscoURIGuid">@Model.JobProfile.Title</a></h3>
         <p>@Model.JobProfile.Description</p>
     </div>
     <div class="ncs-progress govuk-clearfix">
