Remove Skills fixes

--- a/DFC.App.MatchSkills/Views/ConfirmRemove/body.cshtml
+++ b/DFC.App.MatchSkills/Views/ConfirmRemove/body.cshtml
@@ -22,7 +22,7 @@
             </div>
         </fieldset>
     </div>
-    <form action="/matchskills/@CompositeViewModel.PageId.Removed.Value">
+    <form method="post" action="/matchskills/@CompositeViewModel.PageId.Removed.Value">
         @foreach (var skill in Model.Skills)
         {
             <input id="@skill.Id" name="@skill.Id--@skill.Name" value="@skill.Name" type="hidden" />
