--- a/DFC.App.MatchSkills/Views/Removed/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/Removed/Body.cshtml
@@ -9,14 +9,25 @@
     slm.EndSkillsListHTML = "</ul>";
 }
 
-    <div class="govuk-grid-column-two-thirds">
-        <div class="govuk-panel govuk-panel--confirmation govuk-!-margin-top-6">
-            <govukHeadingH1 additional-class="govuk-panel__title govuk-panel--confirmation" text="Skill(s) removed"></govukHeadingH1>
-        </div>
-        <govukHeadingH2 text="You have successfully  removed the following skills from your skills list"></govukHeadingH2>
-
-        @await Component.InvokeAsync("SkillsList", slm)
-        
-
-        <govukLink id="@Model.GetElementId("govukButtonLink", "ReturnToSkillsList")" Link-Title="Return to skills list" Link-Text="Return to your skills list" Link-Href="@CompositeViewModel.PageId.SkillsBasket"></govukLink>
+<div class="govuk-grid-column-two-thirds">
+    <div class="govuk-panel govuk-panel--confirmation govuk-!-margin-top-6">
+        <govukHeadingH1 additional-class="govuk-panel__title govuk-panel--confirmation" text="Skill(s) removed"></govukHeadingH1>
     </div>
+    <govukHeadingH3 text="You have successfully removed the following skills from your skills list"></govukHeadingH3>
+
+    @await Component.InvokeAsync("SkillsList", slm)
+
+    @if (!Model.HasRemainingSkills)
+    {
+        <govukHeadingH3 text="Your skills list is now empty"></govukHeadingH3>
+        <div class="govuk-body">
+            To find career matches, you can <govukLink id="@Model.GetElementId("govukButtonLink", "moreSkills")" Link-Title="Return to skills list" Link-Text="Return to your skills list" Link-Href="@CompositeViewModel.PageId.MoreSkills"></govukLink>
+        </div>
+    }
+    else
+    {
+        <govukLink id="@Model.GetElementId("govukButtonLink", "ReturnToSkillsList")" Link-Title="Return to skills list" Link-Text="Return to your skills list" Link-Href="@CompositeViewModel.PageId.SkillsBasket"></govukLink>
+
+    }
+
+</div>
